--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ models/yolov7/
 models/fold1
 models/fold2
 models/fold3
+models/predict
 *.ipynb_checkpoints
 torchvision
+onnxsim-setup
+!models/yolov7/runs/train
