--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ models/predict
 *.ipynb_checkpoints
 torchvision
 onnxsim-setup
+!models/yolov7/runs
 !models/yolov7/runs/train
+!models/yolov7/runs/train/**
