model trainings and tests

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,29 @@ models/predict
 *.ipynb_checkpoints
 torchvision
 onnxsim-setup
-!models/yolov7/
-!models/yolov7/runs
-!models/yolov7/runs/train
-!models/yolov7/runs/train/**
+models/yolov7/cfg
+models/yolov7/data
+models/yolov7/deploy
+models/yolov7/figure
+models/yolov7/inference
+models/yolov7/models
+models/yolov7/paper
+models/yolov7/ssd
+models/yolov7/scripts
+models/yolov7/tools
+models/yolov7/utils
+models/yolov7/wandb
+models/yolov7/.git
+models/yolov7/detect.py
+models/yolov7/detect.py
+models/yolov7/train.py
+models/yolov7/export.py
+models/yolov7/README.md
+models/yolov7/test.py
+models/yolov7/LICENSE.md
+models/yolov7/requirements.txt
+models/yolov7/traced_model.pt
+models/yolov7/yolov7.pt
+models/yolov7/.gitignore
+models/yolov7/train_aux.py
+models/yolov7/runs/detect
